--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=true&serverTimeTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=admin 
+spring.datasource.password=admin
 
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
